--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -75,8 +75,9 @@
                                             <span  t-field="doc.name"></span>
                                         </h2>
 
-                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important; vertical-align:middle !important;" t-field="doc.e_desciption">
-                                        </span>
+                                        <p style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important; vertical-align:middle !important;" >
+                                            Proyecto: <span  t-field="doc.e_desciption"></span>
+                                        </p>
 
 <!--                                        <div>-->
 <!--                                            <address class="text-right" itemscope="itemscope">-->
@@ -217,17 +218,21 @@
                                                             </div>
                                                         </div>
                                                         <div class="row">
-                                                            <t t-if = "line.product_template_id.image_1920 != False" >
-                                                                <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 50px;"/>
-                                                            </t>
-                                                            <t t-if = "line.product_template_id.image_1920 == False" >
-                                                                <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.jpg'" style="max-height: 50px;" />
-                                                            </t>
+                                                            <div class="col-12  text-center">
+                                                                <t t-if = "line.product_template_id.image_1920 != False" >
+                                                                    <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 50px;"/>
+                                                                </t>
+                                                                <t t-if = "line.product_template_id.image_1920 == False" >
+                                                                    <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.jpg'" style="max-height: 200px;" />
+                                                                </t>
+                                                            </div>
                                                         </div>
 
                                                     </td>
                                                     <td name="th_description">
-                                                        <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong><br/>
+                                                        <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong>
+                                                        <br/>
+                                                        <br/>
                                                         <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 90% !important;">
                                                         <t t-if = "line.product_template_id.description_sale != False" >
                                                              <t t-esc ="line.product_template_id.description_sale" />
