--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -44,14 +44,6 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <div class="page">
-                    <style>
-                        .rectangulo{
-                            background-color: red;
-                            color:blue;
-                        }
-
-                    </style>
-<!--                    <link t-att-href="'/presupuesto_airovac/static/src/css/cotizacion.css'" rel="stylesheet"/>-->
                     <body  >
 
                         <div  class="example-css-class" >
@@ -79,79 +71,12 @@
                                             Proyecto: <span  t-field="doc.e_desciption"></span>
                                         </p>
 
-<!--                                        <div>-->
-<!--                                            <address class="text-right" itemscope="itemscope">-->
-<!--                                                <div>-->
-<!--                                                    <span itemprop="name" t-field="doc.company_id.name"></span>-->
-<!--                                                </div>-->
-<!--                                                <div itemprop="address" itemscope="itemscope" >-->
-<!--                                                        <div itemprop="streetAddress">-->
-<!--                                                            <p  class="text-right">-->
-<!--                                                                <t t-esc ="doc.company_id.street_name" />-->
-<!--                                                                <t t-esc ="doc.company_id.street_number" />-->
-<!--                                                                <t t-esc ="doc.company_id.street_number2" /><br/>-->
-<!--                                                                CP <t t-esc ="doc.company_id.zip" />-->
-<!--                                                                <t t-esc ="doc.company_id.city" />,-->
-<!--                                                                <t t-esc ="doc.company_id.state_id.code" />-->
-<!--                                                                <t t-sec ="doc.company_id.country_id"></t>-->
-<!--                                                            </p>-->
-<!--                                                        </div>-->
-<!--                                                </div>-->
-<!--                                            </address>-->
-<!--                                        </div>-->
-
-
-
                                     </div> <!-- DIV 4 DERECHO-->
                                 </div> <!-- ROW -->
                             </div> <!-- HEADER -->
 
 
                             <div class="article o_report_layout_standard o_company_1_layout" data-oe-model="sale.order" data-oe-id="18" data-oe-lang="es_ES">
-<!--                                <div class="address row">-->
-<!--                                    <div  class="col-6">-->
-
-
-
-<!--                                        <div class="oe_structure"></div>-->
-<!--                                        <h2 style="font-family: verdana !important;font-weight: bold !important; font-size: 18pt;!important">-->
-<!--                                            <span>Cotización # </span>-->
-<!--                                            <span t-field="doc.name"></span>-->
-<!--                                        </h2>-->
-<!--                                    </div>-->
-<!--                                    <div name="address" class="col-6">-->
-<!--                                        <div>-->
-<!--                                            <address class="mb-0" itemscope="itemscope" >-->
-<!--                                                <div>-->
-
-<!--                                                    <span itemprop="name" t-field="doc.partner_id.parent_id.name"></span><br/>-->
-<!--                                                    <span itemprop="name" t-field="doc.partner_id.name"></span>-->
-<!--                                                </div>-->
-<!--                                                <div itemprop="address" itemscope="itemscope" >-->
-<!--                                                    <div class="d-flex align-items-baseline">-->
-<!--                                                        <div class="w-100" itemprop="streetAddress">-->
-<!--                                                            <t t-esc ="doc.partner_id.street_name" />-->
-<!--                                                            <t t-esc ="doc.partner_id.street_number" />-->
-<!--                                                            <t t-if = "doc.partner_id.street_number2">-->
-<!--                                                                /<t t-esc ="doc.partner_id.street_number2" /><br/>-->
-<!--                                                            </t>-->
-<!--                                                            <t t-esc ="doc.partner_id.zip" />-->
-<!--                                                            <t t-esc ="doc.partner_id.city_id.name" />-->
-<!--                                                            <t t-if = "doc.partner_id.state_id.code">-->
-<!--                                                                , <t t-esc ="doc.partner_id.state_id.code" />-->
-<!--                                                            </t>-->
-
-<!--                                                            <br/>-->
-<!--                                                            <t t-sec ="doc.partner_id.country_id"></t>-->
-<!--                                                        </div>-->
-
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </address>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-
                                 <div class="row" ><!--row fechas y comercial-->
                                     <div class="col-2 text-left">
                                         <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
@@ -165,7 +90,7 @@
                                         <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
                                             <span t-field="doc.create_uid.name"></span><br/>
                                             <span t-field="doc.date_order" t-options='{"format": "dd/MM/yyyy"}'  ></span><br/>
-                                            <span t-field="doc.validity_date"   ></span><br/>
+                                            <span t-field="doc.validity_date" ></span><br/>
                                             <span t-field="doc.payment_term_id.name"></span>
 
                                         </p>
@@ -185,7 +110,7 @@
                                 <div class="row"><!--row fechas y comercial-->
                                      <div class="col-12 text-left">
                                         <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
-                                            Estimado(a),</span><br/>
+                                            Estimado(a),</span>
                                         <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
                                             En respuesta a su amable solicitud, presento la siguiente cotización
                                         </span>
@@ -214,7 +139,7 @@
                                                     <td name="td_partida" class="text-center">
                                                         <div class="row" >
                                                             <div class="col-12  text-center">
-                                                            <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
+                                                                 <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
                                                             </div>
                                                         </div>
                                                         <div class="row">
@@ -223,7 +148,7 @@
                                                                     <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 50px;"/>
                                                                 </t>
                                                                 <t t-if = "line.product_template_id.image_1920 == False" >
-                                                                    <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.jpg'" style="max-height: 200px;" />
+                                                                    <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.jpg'" style="max-height: 250px;" />
                                                                 </t>
                                                             </div>
                                                         </div>
@@ -231,7 +156,6 @@
                                                     </td>
                                                     <td name="th_description">
                                                         <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong>
-                                                        <br/>
                                                         <br/>
                                                         <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 90% !important;">
                                                         <t t-if = "line.product_template_id.description_sale != False" >
