--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -107,16 +107,12 @@
                                     </div>
                                 </div><!--row fechas y comercial-->
 
-                                <div class="row"><!--row fechas y comercial-->
+                                <div class="row m-3"><!--row fechas y comercial-->
                                      <div class="col-12 text-left">
-                                      <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important; line-height: 90% !important;" >
-                                        <span >
-                                            Estimado(a),
-                                        </span> <br/>
-                                        <span >
-                                            En respuesta a su amable solicitud, presento la siguiente cotización
-                                        </span>
-                                         </p>
+                                      <p style="font-family: verdana !important;font-weight: normal !important;" >
+                                        <span >Estimado(a),</span> <br/>
+                                        <span >En respuesta a su amable solicitud, presento la siguiente cotización</span>
+                                      </p>
                                      </div>
                                 </div><!--row fechas y comercial-->
                                 <!--Tabla-->
@@ -157,8 +153,9 @@
                                                         </div>
 
                                                     </td>
-                                                    <td name="th_description" style="line-height: 100% !important;">
+                                                    <td name="th_description" style="line-height: 100% !important text-align: justify !important ;">
                                                         <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong>
+                                                        <br/>
                                                         <br/>
                                                         <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 90% !important;">
                                                         <t t-if = "line.product_template_id.description_sale != False" >
@@ -265,56 +262,40 @@
                                 </div>
                                 <div class="oe_structure"></div>
 
-
-
                                 <div style="margin-top:5px;"  class="col-12 text-left" name="information_block">
-                                    <h5> Condiciones Generales:</h5>
-                                    » Los precios son en dólares americanos y se cobrarán en dólares, ó al tipo de cambio de venta bancario vigente a la fecha del pago <br/>
-                                    » Los precios no incluyen el 16% de I.V.A. <br/>
-                                    » Las condiciones de pago son: 50% anticipo, 50% contra aviso de embarque <br/>
-                                    » Todos los pedidos de productos "made to order", especiales ó configurables, tales como válvulas de mariposa, válvulas superiores a 2.5", UMAS, o cualquier otro producto
-                                    que se indique lo requiera, deberán colocarse con anticipo, sin excepción, aún si las condiciones del punto anterior no lo indiquen. <br/>
-                                    » La entrega del material ó embarque, se realizará una vez confirmado el pago en firme en nuestras cuentas bancarias.<br/>
-
-                                    » LOS EQUIPOS SE COTIZAN LAB
-                                    » Nuestro almacén en Monterrey<br/>
-                                    » En caso que esta cotización se exprese LAB en una ubicación distinta a nuestras instalaciones, el tiempo de entrega será de 1 a 5 días hábiles adicionales a lo expresado en cada partida.<br/>
-                                    » Toda solicitud de cambio logístico que sea solicitada por parte del cliente, será cotizada por parte de AiroVAC, y ejecutada, previa autorización y pago por parte del cliente.<br/>
-
-                                    » Tiempos de entrega: los indicados en cada partida, salvo previa venta; y son a partir de la recepción de su Orden de Compra y Anticipo<br/>
-                                    » Las existencias de esta propuesta, pudieran no estar disponibles al momento de su compra; en dado caso, se indicará el tiempo de entrega una vez colocado el pedido al fabricante.<br/>
-                                    » Validez de cotización: 30 días<br/>
-                                    » La garantía de los equipos depende de la marca y modelo, y va desde 1 hasta 5 años a patir de la entrega.<br/>
-                                    Sin más por el momento quedo a sus ordenes para cualquier aclaración.<br/>
-                                    Atentamente
-
+                                    <h2 style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt;!important" > Condiciones Generales:</h2>
+                                    <p style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt;!important text-align: justify !important ;" >
+                                        <t t-esc ="doc.note" />
+                                    </p>
                                 </div>
-
-                                <div style="margin-top:5px;" class="col-12 text-left" name="information_block">
-                                    <h5> Términos y condiciones:</h5>
-                                    <t t-esc="doc.note"></t>
-
-                                </div>
-
                             </div>
 
                             <div class="footer">
-                                <div class="text-center" style="border-top: 1px solid black; font-size: 13px;">
-                                    <span>  AiroVAC</span>
-                                    <span> Proyectos en Ventilación, Agua y Control<br/></span>
-                                    <span> Tel. Mty (81) 8333 7738, D.F. (55) 5005 9893, Gdl (33) 8995 7135, Mer (999) 801 1300, Pue (222) 644 0560<br/>
-                                    </span>
-                                    <span> e.mail: www.airovac.com<br/></span>
-                                    Página <span class="page"/> / <span class="topage"/>
-
-                                </div>
+                                <div class="row">
+                                    <div class="col-12" style="border-top: 1px solid black; font-size: 8pt;">
+                                        <p class="text-center" >
+                                                 Representaciones Internacionales AIR SA de CV <br/>
+                                                 <t t-esc ="doc.company_id.street_name" />
+                                                 <t t-esc ="doc.company_id.street_number" />
+                                                 <t t-esc ="doc.company_id.street_number2" />
+                                                 Col
+                                                 <t t-esc ="doc.company_id.l10n_mx_edi_colony" />
+                                                 <t t-esc ="doc.company_id.l10n_mx_edi_colony_code" />
+                                                 <t t-esc ="doc.company_id.l10n_mx_edi_locality_id" />,
+                                                 <t t-esc ="doc.company_id.city" />
+                                                 <t t-sec ="doc.company_id.state_id" />
+                                                 <t t-sec ="doc.company_id.zip" />
+                                                 <t t-sec ="doc.company_id.country_id" /><br/>
+                                                 RFC: RIA031208EU4,
+                                                 <t t-esc ="doc.company_id.phone" />,
+                                                 <t t-esc ="doc.company_id.email" />
+                                        </p>
+                                        <p class="text-right">
+                                        Página <span class="page"/> / <span class="topage"/>
+                                        </p>
+                                    </div>
+                                </div><!--row -->
                             </div>
-
-
-
-
-
-
                         </div>
                     </body>
                 </div><!--page-->
